# godot-rust-template-test

./: .gitignore  .ignore  Cargo.toml  README.md
godot/: project.godot
godot/assets/: trail_material.tres
godot/assets/icon/: godot-ferris-1024x1024.png.import  godot-ferris-120x120.png.import  godot-ferris-128x128.png.import  godot-ferris-16x16.png.import  godot-ferris-32x32.png.import  godot-ferris-64x64.png.import  godot-ferris-76x76.png.import
godot/native/: HelloWorld.gdns  Mob.gdns  game.gdnlib
godot/scenes/: Game.tscn  Hud.tscn  Main.tscn  Mob.tscn  Player.tscn
macros/: Cargo.toml
macros/src/: lib.rs
rust/: Cargo.toml
rust/src/: game.rs  hud.rs  lib.rs  main_scene.rs  mob.rs  player.rs  utils.rs
xtask/: Cargo.toml
xtask/src/: generator.rs  main.rs
xtask/templates/: gdns_class.hbs  rust_class.hbs  tscn.hbs
