[package]
name = "xtask"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xshell = "0.1.14"
anyhow = "1.0.40"
handlebars = "4.0.0"
convert_case = "0.4.0"
syn = { version = "1.0.73", features = ["parsing", "full", "extra-traits", "visit-mut"] }
quote = "1.0.9"
clap = "3.0.0-beta.2"
log = "0.4.14"
simplelog = "0.10.0"
